--- a/records.html
+++ b/records.html
@@ -355,6 +355,10 @@ records:
     img: wrekmeister-harmonies-lf.jpg
     href: https://www.discogs.com/release/9054147
 
+  - title: Xiu Xiu — Knife Play
+    img: xiu-xiu-kp.jpg
+    href: https://www.discogs.com/release/9664375
+
   - title: Xiu Xiu — Plays the Music of Twin Peaks
     img: xiu-xiu-ptmotp.jpg
     href: https://www.discogs.com/release/8884007
