--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,7 @@ resume:
 ---
 
 <div class="pdf-link float-right hidden-print">
-  <a href="resume.pdf" target="_blank">
+  <a href="cmcenroe.pdf" target="_blank">
     <i class="fa fa-download"></i> PDF
   </a>
 </div>
