--- a/resume.html
+++ b/resume.html
@@ -6,19 +6,19 @@ resume:
     - name: Languages
       items:
         - Rust
+        - C
+        - x86 assembly
         - Ruby
         - JavaScript
-        - C
-        - Python
-        - x86 assembly
 
     - name: Frameworks
       items:
+        - Protobuf
+        - Node.js
         - Ruby on Rails
         - Knockout.js
-        - Node.js
 
-    - name: Datastores
+    - name: Databases
       items:
         - PostgreSQL
         - MongoDB
@@ -38,7 +38,7 @@ resume:
         - FreeBSD
         - Ubuntu
         - Arch Linux
-        - OS X
+        - macOS
 
   work:
     - title: Software Developer
@@ -46,11 +46,12 @@ resume:
       location: Montréal
       start: October 2015
       end: present
-      stack: [Knockout.js, Ruby on Rails, PostgreSQL, Capistrano]
+      stack: [Rust, C, Ruby on Rails, PostgreSQL, Protobuf, Knockout.js]
       doings:
-        - Developed new features for the Trader demand-side-platform Rails application
-        - Refactored application code and migrated database schemas
-        - Participated in design of new APIs and technical features
+        - Developed a new system for deploying campaign configuration
+        - Set up fuzzing harnesses for Erlang NIFs
+        - Encouraged more direct use of PostgreSQL features
+        - Helped establish practices related to lints, versioning, and deployment
 
     - title: Software Developer
       company: Busbud
@@ -74,7 +75,6 @@ resume:
 <h2 class="visible-print">Curtis McEnroe</h2>
 
 <ul class="subtitle list-unstyled visible-print">
-  <li>{{ site.domain }}</li>
   <li>{{ site.email }}</li>
   <li>github.com/programble</li>
 </ul>
