Fix Busbud migration description

--- a/resume.html
+++ b/resume.html
@@ -87,7 +87,7 @@ resume:
       end: April 2015
       doings:
         I migrated geographic data
-        from MongoDB to PostgreSQL,
+        from CouchDB to PostgreSQL,
         and replaced Elasticsearch
         with Postgres materialized views
         and trigram indexes.
