Add Trans Day of Revenge

--- a/records.html
+++ b/records.html
@@ -107,6 +107,10 @@ records:
     img: fka-twigs-lp1.jpg
     href: https://www.discogs.com/release/5964177
 
+  - title: G.L.O.S.S. — Trans Day of Revenge
+    img: gloss-tdor.jpg
+    href: https://www.discogs.com/release/8757796
+
   - title: Godspeed You! Black Emperor — F♯ A♯ ∞
     img: godspeed-you-black-emperor-fa.jpg
     href: https://www.discogs.com/release/4031284
