--- a/records.html
+++ b/records.html
@@ -366,6 +366,10 @@ records:
   - title: Xiu Xiu — Plays the Music of Twin Peaks
     img: xiu-xiu-ptmotp.jpg
     href: https://www.discogs.com/release/8884007
+
+  - title: Xiu Xiu — Forget
+    img: xiu-xiu-f.jpg
+    href: https://www.discogs.com/release/9873059
 ---
 
 <hr>
