Set AdGear end date

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@ resume:
       company: AdGear
       location: Montréal
       start: October 2015
-      end: present
+      end: April 2017
       doings:
         I designed and implemented a replacement
         for the primary ETL
