--- a/records.html
+++ b/records.html
@@ -67,6 +67,10 @@ records:
     img: chariot-ow.jpg
     href: https://www.discogs.com/release/4097145
 
+  - title: C H R I S T — T O W E R
+    img: christ-t.jpg
+    href: https://www.discogs.com/release/7648818
+
   - title: clipping. — CLPPNG
     img: clipping-c.jpg
     href: https://www.discogs.com/release/5762314
