Add The Great Annihilator

--- a/records.html
+++ b/records.html
@@ -327,6 +327,10 @@ records:
     img: swans-lol.jpg
     href: https://www.discogs.com/release/7850529
 
+  - title: Swans — The Great Annihilator
+    img: swans-tga.jpg
+    href: https://www.discogs.com/release/10334375
+
   - title: Swans — Soundtracks for the Blind
     img: swans-sftb.jpg
     href: https://www.discogs.com/release/5563055
