--- a/records.html
+++ b/records.html
@@ -71,6 +71,10 @@ records:
     img: christ-t.jpg
     href: https://www.discogs.com/release/7648818
 
+  - title: C H R I S T — C I N D E R
+    img: christ-c.jpg
+    href: https://www.discogs.com/release/10368743
+
   - title: clipping. — CLPPNG
     img: clipping-c.jpg
     href: https://www.discogs.com/release/5762314
