Add Hopper to resume

--- a/resume.html
+++ b/resume.html
@@ -57,6 +57,14 @@ resume:
 
   work:
     - title: Software Developer
+      company: Hopper
+      location: Montréal
+      start: May 2017
+      end: present
+      doings:
+        Learning new things…
+
+    - title: Software Developer
       company: AdGear
       location: Montréal
       start: October 2015
