Add Everything Is Good Here

--- a/records.html
+++ b/records.html
@@ -7,6 +7,10 @@ records:
     img: andrew-jackson-jihad-ptcepatlpitw.jpg
     href: https://www.discogs.com/release/5125050
 
+  - title: The Angels of Light — Everything Is Good Here / Please Come Home
+    img: angels-of-light-eighpch.jpg
+    href: https://www.discogs.com/release/1136450
+
   - title: The Angels of Light — Sing “Other People”
     img: angels-of-light-sop.jpg
     href: https://www.discogs.com/release/1528700
