--- a/records.html
+++ b/records.html
@@ -367,6 +367,10 @@ records:
     img: swans-tgm.jpg
     href: https://www.discogs.com/release/8647542
 
+  - title: Swans — Deliquescence
+    img: swans-d.jpg
+    href: https://www.discogs.com/release/10307873
+
   - title: Those Who Walk Away — The Infected Mass
     img: those-who-walk-away-tim.jpg
     href: https://www.discogs.com/release/9970110
