Add Everything Now

--- a/records.html
+++ b/records.html
@@ -55,6 +55,10 @@ records:
     img: arcade-fire-r.jpg
     href: https://www.discogs.com/release/5041370
 
+  - title: Arcade Fire — Everything Now
+    img: arcade-fire-en.jpg
+    href: https://www.discogs.com/release/10601119
+
   - title: The Beatles — The Beatles
     img: beatles-tb.jpg
     href: https://www.discogs.com/release/1436445
