Add Things We Lost in the Fire

--- a/records.html
+++ b/records.html
@@ -167,6 +167,10 @@ records:
     img: khora-sybie.jpg
     href: https://www.discogs.com/release/2536219
 
+  - title: Low — Things We Lost in the Fire
+    img: low-twlitf.jpg
+    href: https://www.discogs.com/release/9308609
+
   - title: Les Momies de Palerme — Brûlez ce Coeur
     img: les-momies-de-palerme-bcc.jpg
     href: https://www.discogs.com/release/2536219
