--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,34 @@ title: Projects
 
 projects:
   current:
+    - name: Indiana
+      repo: programble/indiana
+      tech: [NASM]
+      year: 2017
+      icon: fa-tasks
+      desc: Port of Jonesforth
+
+    - name: Fix
+      repo: programble/fix
+      tech: [Rust]
+      year: 2017
+      icon: fa-calculator
+      desc: Fixed-point numbers
+
+    - name: Tetrasm
+      repo: programble/tetrasm
+      tech: [NASM]
+      year: 2015
+      icon: fa-gamepad
+      desc: Tetris for x86
+
+    - name: Writ
+      repo: programble/writ
+      tech: [CSS]
+      year: 2015
+      icon: fa-align-left
+      desc: Opinionated, classless styles for semantic HTML
+
     - name: Inth OAuth2
       repo: programble/inth-oauth2
       tech: [Rust]
@@ -17,27 +45,7 @@ projects:
       icon: fa-filter
       desc: HTML parsing and querying with CSS selectors
 
-    - name: Ego Tree
-      repo: programble/ego-tree
-      tech: [Rust]
-      year: 2016
-      icon: fa-tree
-      desc: Vec-backed mutable tree
-
-    - name: Writ
-      repo: programble/writ
-      tech: [CSS]
-      year: 2015
-      icon: fa-align-left
-      desc: Opinionated, classless styles for semantic HTML
-
-    - name: Tetrasm
-      repo: programble/tetrasm
-      tech: [NASM]
-      year: 2015
-      icon: fa-gamepad
-      desc: Tetris for x86
-
+  past:
     - name: Pult
       repo: programble/pult
       tech: [Node.js]
@@ -45,20 +53,12 @@ projects:
       icon: fa-terminal
       desc: Access local servers on .dev domains
 
-  past:
     - name: Errio
       repo: programble/errio
       tech: [Node.js]
       year: 2015
       icon: fa-exchange
       desc: Error serialization and deserialization
-
-    - name: Careen
-      repo: programble/careen
-      tech: [TypeScript]
-      year: 2015
-      icon: fa-database
-      desc: SQL schema migration manager
 
     - name: Gury
       repo: programble/gury
