Set Hopper end date
Just so I don't forget.

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@ resume:
       company: Hopper
       location: Montréal
       start: May 2017
-      end: present
+      end: August 2017
       doings:
         Learning new things…
 
