Add Luciferian Towers, Fabulous Muscles, Angel Guts

--- a/records.html
+++ b/records.html
@@ -151,6 +151,10 @@ records:
     img: godspeed-you-black-emperor-asaod.jpg
     href: https://www.discogs.com/release/6802242
 
+  - title: Godspeed You! Black Emperor — "Luciferian Towers"
+    img: godspeed-you-black-emperor-lt.jpg
+    href: https://www.discogs.com/release/10872716
+
   - title: Hangedup & Tony Conrad — Transit of Venus
     img: hangedup-tony-conrad-tov.jpg
     href: https://www.discogs.com/release/3690845
@@ -390,6 +394,14 @@ records:
   - title: Xiu Xiu — Knife Play
     img: xiu-xiu-kp.jpg
     href: https://www.discogs.com/release/9664375
+
+  - title: Xiu Xiu — Fabulous Muscles
+    img: xiu-xiu-fm.jpg
+    href: https://www.discogs.com/release/6680344
+
+  - title: 'Xiu Xiu — Angel Guts: Red Classroom'
+    img: xiu-xiu-agrc.jpg
+    href: https://www.discogs.com/release/6680344
 
   - title: Xiu Xiu — Plays the Music of Twin Peaks
     img: xiu-xiu-ptmotp.jpg
