--- a/records.html
+++ b/records.html
@@ -327,6 +327,10 @@ records:
     img: slint-u.jpg
     href: https://www.discogs.com/release/4678006
 
+  - title: St. Vincent — MASSEDUCTION
+    img: st-vincent-m.jpg
+    href: https://www.discogs.com/release/10989027
+
   - title: Colin Stetson & Sarah Neufeld — Never Were the Way She Was
     img: stetson-colin-neufeld-sarah-nwtwsw.jpg
     href: https://www.discogs.com/release/6887839
