Update Hopper section of resume

--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,12 @@ resume:
       start: May 2017
       end: August 2017
       doings:
-        Learning new things…
+        I learned some Scala
+        and a little bit of HBase,
+        and set up a rolling index
+        for events in Elasticsearch.
+        I left due to burnout
+        from my previous job.
 
     - title: Software Developer
       company: AdGear
