Add "funemployed" section to resume

--- a/resume.html
+++ b/resume.html
@@ -56,6 +56,23 @@ resume:
     in Rust IRC channels.
 
   work:
+    - title: Funemployed
+      company: Home
+      location: Montréal
+      start: August 2017
+      end: present
+      doings:
+        Away from work,
+        I tried to focus on creativity.
+        I created a public, collaborative ASCII art SSH service
+        using memory-mapped files, local sockets and ncurses.
+        I wrote an interactive graphics data explorer
+        with framebuffer, X11 and Cocoa interfaces.
+        Along with that,
+        I wrote a PNG encoder
+        and used bugs in my own code
+        to create interesting images.
+
     - title: Software Developer
       company: Hopper
       location: Montréal
