Combine separate experience headings

--- a/resume.html
+++ b/resume.html
@@ -155,11 +155,9 @@ resume:
   {% endfor %}
 </ul>
 
-<h3>Volunteer experience</h3>
+<h3>Experience</h3>
 
 <p>{{ page.resume.volunteer }}</p>
-
-<h3>Work experience</h3>
 
 {% for job in page.resume.work %}
   <h4>
