Update skills somewhat arbitrarily

--- a/resume.html
+++ b/resume.html
@@ -12,29 +12,27 @@ resume:
         - Rust
         - C
         - x86 assembly
-        - Ruby (Rails)
-        - TypeScript/JavaScript (Node.js, Knockout.js)
+        - Ruby
+        - TypeScript/JavaScript
 
     - name: Databases
       items:
         - PostgreSQL
+        - SQLite
         - Redis
-        - MongoDB
 
     - name: Systems
       items:
         - FreeBSD
-        - Ubuntu
-        - Arch Linux
         - macOS
+        - Arch Linux
 
     - name: Tools & Platforms
       items:
         - Protobuf
         - American Fuzzy Lop
-        - Git
-        - Heroku
-        - Digital Ocean
+        - ncurses
+        - zlib
 
   volunteer:
     I’ve written many, and contributed to some,
