Rewrite "volunteer" section of resume

--- a/resume.html
+++ b/resume.html
@@ -35,23 +35,21 @@ resume:
         - zlib
 
   volunteer:
-    I’ve written many, and contributed to some,
-    open-source projects on GitHub.
-    For example,
-    a friend and I
-    created a Clojure-like Lisp
-    with Ruby interoperation
-    on the Rubinius VM.
-    I’ve also made web API clients,
+    I write a lot of code
+    because I enjoy solving problems
+    and learning how to do things myself.
+    I've made web API clients,
     stylesheets,
     development tools,
     data structure libraries,
     hobby operating systems,
-    and many Befunge interpreters.
-    I publish short technical articles
-    on my website
-    and have spent time helping others
-    in Rust IRC channels.
+    and too many Befunge interpreters.
+    I try to help out
+    in Rust IRC channels
+    and sometimes write
+    technical blog posts.
+    My posts have even been on Hacker News twice,
+    so you could say I'm kind of a big deal.
 
   work:
     - title: Funemployed
