Add The Alone Rush

--- a/records.html
+++ b/records.html
@@ -395,6 +395,10 @@ records:
     img: wrekmeister-harmonies-lf.jpg
     href: https://www.discogs.com/release/9054147
 
+  - title: Wrekmeister Harmonies — The Alone Rush
+    img: wrekmeister-harmonies-tar.jpg
+    href: https://www.discogs.com/release/11843831
+
   - title: Xiu Xiu — Knife Play
     img: xiu-xiu-kp.jpg
     href: https://www.discogs.com/release/9664375
