Add Die Tür ist zu

--- a/records.html
+++ b/records.html
@@ -355,6 +355,10 @@ records:
     img: swans-tga.jpg
     href: https://www.discogs.com/release/10334375
 
+  - title: Swans — Die Tür ist zu
+    img: swans-dtiz.jpg
+    href: https://www.discogs.com/release/11895998
+
   - title: Swans — Soundtracks for the Blind
     img: swans-sftb.jpg
     href: https://www.discogs.com/release/5563055
