Add Rooms of the House

--- a/records.html
+++ b/records.html
@@ -115,6 +115,10 @@ records:
     img: dispute-w.jpg
     href: https://www.discogs.com/release/3832730
 
+  - title: La Dispute — Rooms of the House
+    img: dispute-roth.jpg
+    href: https://www.discogs.com/release/5542532
+
   - title: Do Make Say Think — You, You're a History in Rust
     img: do-make-say-think-yyahir.jpg
     href: https://www.discogs.com/release/919297
