Add Street Sects — The Kicking Mule

--- a/records.html
+++ b/records.html
@@ -339,6 +339,10 @@ records:
     img: stetson-colin-neufeld-sarah-nwtwsw.jpg
     href: https://www.discogs.com/release/6887839
 
+  - title: Street Sects — The Kicking Mule
+    img: street-sects-tkm.jpg
+    href: https://www.discogs.com/release/12707150
+
   - title: Swans — Swans
     img: swans-s.jpg
     href: https://www.discogs.com/release/6902777
