--- a/records.html
+++ b/records.html
@@ -91,6 +91,10 @@ records:
     img: constellation-sotsl.jpg
     href: https://www.discogs.com/release/361866
 
+  - title: Converge — Jane Doe
+    img: converge-jd.jpg
+    href: https://www.discogs.com/release/9471602
+
   - title: Julee Cruise — Floating Into the Night
     img: julee-cruise-fitn.jpg
     href: https://www.discogs.com/release/6197789
