Add End Position

--- a/records.html
+++ b/records.html
@@ -343,6 +343,10 @@ records:
     img: stetson-colin-neufeld-sarah-nwtwsw.jpg
     href: https://www.discogs.com/release/6887839
 
+  - title: Street Sects — End Position
+    img: street-sects-ep.jpg
+    href: https://www.discogs.com/release/13169601
+
   - title: Street Sects — The Kicking Mule
     img: street-sects-tkm.jpg
     href: https://www.discogs.com/release/12707150
