Add Birds Contending

--- a/records.html
+++ b/records.html
@@ -438,6 +438,10 @@ records:
   - title: Xiu Xiu — Forget
     img: xiu-xiu-f.jpg
     href: https://www.discogs.com/release/9873059
+
+  - title: Zhaoze — Birds Contending
+    img: zhaoze-bc.jpg
+    href: https://www.discogs.com/release/13076748
 ---
 
 <hr>
