Add Children of God
It's been a while, hasn't it?

--- a/records.html
+++ b/records.html
@@ -359,6 +359,10 @@ records:
     img: swans-f.jpg
     href: https://www.discogs.com/release/6307172
 
+  - title: Swans — Children of God
+    img: swans-cog.jpg
+    href: https://www.discogs.com/release/16693641
+
   - title: Swans — White Light From the Mouth of Infinity
     img: swans-wlftmoi.jpg
     href: https://www.discogs.com/release/7850529
